fix overflow

--- a/EcoNet/css/small.sass
+++ b/EcoNet/css/small.sass
@@ -28,7 +28,7 @@ div.nav-mob
     justify-content: space-around
     height: 100vh
     width: 100vw
-    position: absolute
+    position: fixed
     top: 0
     left: 0
     background-color: $rouge
